add documents aggregation endpoint
